# executorch

./: .gitignore  CMakeLists.txt
.ci/docker/ci_commit_pins/: pytorch.txt
backends/arm/: arm_quantizer_utils.py
backends/arm/test/models/: test_mobilenet_v2_arm.py
backends/cadence/aot/: export_example.py
examples/cadence/aot/: export_example.py  quantizer.py
examples/custom_ops/: CMakeLists.txt  custom_ops_2.py  targets.bzl  test_custom_ops.sh
examples/executor_runner/: targets.bzl
examples/models/: TARGETS
examples/models/llama2/custom_ops/: targets.bzl
examples/models/llama2/runner/: targets.bzl
examples/models/mobilenet_v2/: TARGETS
examples/models/mobilenet_v3/: TARGETS
examples/models/torchvision_vit/: TARGETS
examples/models/wav2letter/: TARGETS
examples/quantization/: TARGETS  example.py  test_quantize.sh
examples/selective_build/: README.md  targets.bzl
exir/backend/: partitioner.py
exir/backend/test/: backend_with_compiler_demo.py  op_partitioner_demo.py
exir/program/: TARGETS  _program.py
exir/program/test/: test_program.py
exir/verification/: verifier.py
kernels/optimized/: lib_defs.bzl
kernels/quantized/: CMakeLists.txt
runtime/core/exec_aten/util/: targets.bzl
runtime/kernel/: kernel_includes.h
runtime/platform/: targets.bzl
shim/xplat/executorch/codegen/: codegen.bzl
